fix: fixed weird jumping around when  editing a task.

--- a/src/app/list/list.component.sass
+++ b/src/app/list/list.component.sass
@@ -37,3 +37,6 @@
     color: $global-font-color
     +responsive-text
     font-size: 2vw
+
+.project-name-input
+    padding: 10px 10px 10px 10px
